finished editing captions and fixed orientation of photos that needed reorientation. Also edited the love pic to not have the iphone battery life info and other extra space at the top

--- a/style.css
+++ b/style.css
@@ -112,3 +112,9 @@ img{
         width: 100%;
     }
 }
+
+@media only screen and (min-width: 901px) {
+    .ending {
+      font-size: 30px;
+    }
+}
